base/service-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  labels:
    app: service-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: nganeemmanuel/room8-serviceregistry:20250607143158
          ports:
            - containerPort: 8761
