base/service-registry/service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-registry-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: service-registry
                port:
                  number: 8761
          - path: /eureka/
            pathType: Prefix
            backend:
              service:
                name: service-registry
                port:
                  number: 8761
